--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "zendframework/zend-crypt" : "~2.5",
     "zendframework/zend-text" : "~2.5",
     "zendframework/zend-log" : "~2.5",
-    "zendframework/zend-mvc" : "~2.5"
+    "zendframework/zend-mvc" : "~2.5",
+    "zendframework/zend-config": "^2.6"
   },
   "require-dev" : {
     "phpunit/phpunit" : "~5.0"
