--- a/composer.json
+++ b/composer.json
@@ -2,22 +2,11 @@
   "name" : "mt-olympus/kharon",
   "require" : {
     "php" : "^7.0",
-    "mt-olympus/hermes" : "~0.9",
-    "zendframework/zend-console" : "~2.5",
-    "zendframework/zend-view" : "~2.5",
-    "zendframework/zend-serializer" : "~2.5",
-    "zendframework/zend-i18n" : "~2.5",
-    "zendframework/zend-crypt" : "~2.5",
-    "zendframework/zend-text" : "~2.5",
-    "zendframework/zend-log" : "~2.5",
-    "zendframework/zend-mvc" : "~2.5",
-    "zendframework/zend-config": "^2.6"
-  },
-  "require-dev" : {
-    "phpunit/phpunit" : "~5.0"
+    "mt-olympus/hermes" : "^1.0",
+    "zfcampus/zf-console" : "^1.3.0"
   },
   "license" : "MIT",
-  "keywords" : [ "kharon", "zeus", "zf2" ],
+  "keywords" : [ "kharon", "zeus" ],
   "autoload" : {
     "psr-4" : {
       "Kharon\\" : "src/"
