--- a/composer.json
+++ b/composer.json
@@ -1,25 +1,28 @@
 {
-  "name" : "mt-olympus/kharon",
-  "require" : {
-    "php" : "^7.0",
-    "mt-olympus/hermes" : "^1.0",
-    "zfcampus/zf-console" : "^1.3.0"
-  },
-  "license" : "MIT",
-  "keywords" : [ "kharon", "zeus" ],
-  "autoload" : {
-    "psr-4" : {
-      "Kharon\\" : "src/"
+    "name" : "mt-olympus/kharon",
+    "require" : {
+        "php" : "^7.0",
+        "mt-olympus/hermes" : "^1.0",
+        "zfcampus/zf-console" : "^1.3.0"
     },
-    "classmap" : [ "./src" ]
-  },
-  "type" : "library",
-  "config" : {
-    "process-timeout" : 5000
-  },
-  "homepage" : "https://github.com/mt-olympus/kharon",
-  "authors" : [ {
-    "name" : "Leandro Silva",
-    "email" : "leandro@leandrosilva.info"
-  } ]
+    "license" : "MIT",
+    "keywords" : [ "kharon", "zeus" ],
+    "autoload" : {
+        "psr-4" : {
+            "Kharon\\" : "src/"
+        },
+        "classmap" : [ "./src" ]
+    },
+    "bin": [
+        "bin/kharon"
+    ],
+    "type" : "library",
+    "config" : {
+        "process-timeout" : 5000
+    },
+    "homepage" : "https://github.com/mt-olympus/kharon",
+    "authors" : [ {
+        "name" : "Leandro Silva",
+        "email" : "leandro@leandrosilva.info"
+    } ]
 }
